@@ -26,6 +26,7 @@
 * DecidirPlus: Update `unstore` implementation to get token from params [ajawadmirza] #4320
 * CyberSource: Add option for zero amount verify [gasb150] #4313
 * PayU Latam: Refactor `message_from` method, fix failing remote tests [rachelkirk] #4326
+* Adyen: Add currencies with three decimals places [gasb150] #4322
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
